2016-08-30
Decided to use premade slider noUiSlider instead ( http://refreshless.com/nouislider/ )
    It is free and open source, no attribution necessary
    It can move sliders, handle dates, link the sliders, fire events, and is smooth with the mouse.
    Integrated into the config menu of the map.
CANCELED: Custom time range controller
    X mouse down:
    X    A = nearest handle
    X    move A to mouse.
    X    trigger edit event.
    X mouse drag:
    X    B = furthest handle
    X    move B to mouse.
    X    trigger edit event.
    X mouse up:
    X    trigger changed event

2016-08-29
Links will be loaded seperate from nodes
    this allows nodes to be retained and links to be changed (with changing timelines)
    This also allows control over how links are loaded. (order of loading, chunking the requests)
    Changing filters now merely deletes links, and requests new links
        instead of deleting everything and reseting the view
Loading order started:
    nodes are ranked by distance from center of screen
    but nodes that are on screen and larger take priority
        (like if you're zoomed in on 12.34.56 then 12 and 12.34 would take priority)

2016-08-25
Started adding timestamps.
    Decided not to add timestamps to `Node*` tables. Nodes are independent of time?
        If nothing is connecting to a node, it can just not be displayed.
        Nodes at different times won't need different names.
    ? Should `Nodes*` not store number-of-children precalculated if therewill be a potentially changing number?
    Links will have timestamps, quantized to 5 minute intervals.
        12 time slots per hour
        288 time slots per day
        2016 time slots per week (2016 is not a typo)
        105120 time slots per year
    Chose TIMESTAMP over DATETIME for format:
        stamps will be now-ish, not arbirary like appointments or birthdays
        timestamps are 32-bit (vs 64-bit for datetime) => faster, lighter