@@ -12,10 +12,16 @@ class Details:
         web.header("Content-Type", "application/json")
 
         get_data = web.input()
+        filter = get_data.get('filter', '')
+        timestart = get_data.get("tstart", 1)
+        timeend = get_data.get("tend", 2**31 - 1)
+        timestart = int(timestart)
+        timeend = int(timeend)
 
         ips = get_data.get("address").split(".")
         ips = [int(i) for i in ips]
-        details = dbaccess.getDetails(*ips)
+
+        details = dbaccess.getDetails(*ips, filter=filter, timerange=(timestart, timeend))
 
         conn_in = {}
         for connection in details['conn_in']:
